--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,6 +1,6 @@
 ---
 title: Introduction
-description: 'Welcome to the home of your new documentation'
+description: 'Welcome to the TutorOS user guide'
 ---
 
 <img
@@ -14,24 +14,47 @@ description: 'Welcome to the home of your new documentation'
   alt="Hero Dark"
 />
 
-## Setting up
+## User Guide Overview
 
-The first step to world-class documentation is setting up your editing environments.
+This guide is broken into the following sections:
 
 <CardGroup cols={2}>
   <Card
-    title="Edit Your Docs"
+    title="Lesson Templates"
     icon="pen-to-square"
     href="https://mintlify.com/docs/quickstart"
   >
-    Get your docs set up locally for easy development
+    Learn what templates are and how to create them.
   </Card>
   <Card
-    title="Preview Changes"
+    title="Schedule"
     icon="image"
     href="https://mintlify.com/docs/development"
   >
-    Preview your changes before you push to make sure they're perfect
+    See how to view your schedule, add availability and connect your calendar.
+  </Card>
+  <Card
+    title="Managing Lessons"
+    icon="image"
+    href="https://mintlify.com/docs/development"
+  >
+    See how to view your upcoming/previous lessons, how to join a lesson, how our classroom works and
+    how to give post-lesson feedback.
+  </Card>
+  <Card
+    title="Profile"
+    icon="image"
+    href="https://mintlify.com/docs/development"
+  >
+    See how to view your profile page, edit your profile and invite students to your page.
+  </Card>
+  <Card
+    title="Payments"
+    icon="image"
+    img="logo/credit-card-thin.svg"
+    href="https://mintlify.com/docs/development"
+  >
+    See how lesson payments work, how to connect your bank account, and how payouts work.
   </Card>
 </CardGroup>
 
