--- a/templates/view-templates.mdx
+++ b/templates/view-templates.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Markdown Syntax'
+title: 'View Templates'
 description: 'Text, title, and styling in standard markdown'
 icon: 'text-size'
 ---
