--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,20 +1,17 @@
 ---
 title: Introduction
-description: 'Welcome to the TutorOS user guide'
+description: 'Welcome to TutorOS, the management platform for private tutors.'
 ---
 
-<img
-  className="block dark:hidden"
-  src="/images/hero-light.svg"
-  alt="Hero Light"
-/>
-<img
-  className="hidden dark:block"
-  src="/images/hero-dark.svg"
-  alt="Hero Dark"
-/>
+This is your guide to getting started with TutorOS.
 
-## User Guide Overview
+## What is TutorOS?
+
+TutorOS is an online platform, that helps tutors save time, increase their income, and provide more engaging & impactful lessons to their students.
+
+With TutorOS, you can manage your lessons, set your schedule, take online payments, and much more!
+
+### Let’s get started ✨
 
 This guide is broken into the following sections:
 
