--- a/introduction.mdx
+++ b/introduction.mdx
@@ -7,7 +7,7 @@ This is your guide to getting started with TutorOS.
 
 ## What is TutorOS?
 
-TutorOS is an online platform, that helps tutors save time, increase their income, and provide more engaging & impactful lessons to their students.
+TutorOS is an online platform, that saves you time, increases your income, and allows you to provide more engaging & impactful lessons to your students.
 
 With TutorOS, you can manage your lessons, set your schedule, take online payments, and much more!
 
