--- a/introduction.mdx
+++ b/introduction.mdx
@@ -7,7 +7,7 @@ This is your guide to getting started with TutorOS.
 
 ## What is TutorOS?
 
-TutorOS is an online platform, that saves you time, increases your income, and allows you to provide more engaging & impactful lessons to your students.
+TutorOS is an online platform that saves you time, increases your income, and allows you to provide more engaging & impactful lessons to your students.
 
 With TutorOS, you can manage your lessons, set your schedule, take online payments, and much more!
 
@@ -31,19 +31,19 @@ This guide is broken into the following sections:
     See how to view your schedule, add availability and connect your calendar.
   </Card>
   <Card
+    title="Profile"
+    icon="image"
+    href="https://mintlify.com/docs/development"
+  >
+    See how to view your profile page, edit your profile and invite students to your page.
+  </Card>
+  <Card
     title="Managing Lessons"
     icon="image"
     href="https://mintlify.com/docs/development"
   >
     See how to view your upcoming/previous lessons, how to join a lesson, how our classroom works and
     how to give post-lesson feedback.
-  </Card>
-  <Card
-    title="Profile"
-    icon="image"
-    href="https://mintlify.com/docs/development"
-  >
-    See how to view your profile page, edit your profile and invite students to your page.
   </Card>
   <Card
     title="Payments"
