--- a/lessons/classroom.mdx
+++ b/lessons/classroom.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Lesson Templates Intro'
+title: 'Classroom'
 description: 'Text, title, and styling in standard markdown'
 icon: 'text-size'
 ---
