--- a/lessons/joining-lesson.mdx
+++ b/lessons/joining-lesson.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Lesson Templates Intro'
+title: 'Joining Lesson'
 description: 'Text, title, and styling in standard markdown'
 icon: 'text-size'
 ---
