--- a/lessons/leaving-feedback.mdx
+++ b/lessons/leaving-feedback.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Lesson Templates Intro'
+title: 'Leaving Feedback'
 description: 'Text, title, and styling in standard markdown'
 icon: 'text-size'
 ---
