--- a/payments/connect-bank-account.mdx
+++ b/payments/connect-bank-account.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Lesson Templates Intro'
+title: 'Connect Bank Account'
 description: 'Text, title, and styling in standard markdown'
 icon: 'text-size'
 ---
