--- a/payments/payouts.mdx
+++ b/payments/payouts.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Lesson Templates Intro'
+title: 'Payouts'
 description: 'Text, title, and styling in standard markdown'
 icon: 'text-size'
 ---
