--- a/profile/inviting-students.mdx
+++ b/profile/inviting-students.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Lesson Templates Intro'
+title: 'Inviting Students'
 description: 'Text, title, and styling in standard markdown'
 icon: 'text-size'
 ---
