--- a/profile/profile-page.mdx
+++ b/profile/profile-page.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Lesson Templates Intro'
+title: 'Profile Page'
 description: 'Text, title, and styling in standard markdown'
 icon: 'text-size'
 ---
