--- a/faq/solving-zoom-issues.mdx
+++ b/faq/solving-zoom-issues.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Joining A Lesson'
+title: 'Solving Zoom Issues'
 description: 'Text, title, and styling in standard markdown'
 icon: 'text-size'
 ---
