--- a/faq/zoom-account.mdx
+++ b/faq/zoom-account.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Joining A Lesson'
+title: 'Zoom Account'
 description: 'Text, title, and styling in standard markdown'
 icon: 'text-size'
 ---
