--- a/introduction.mdx
+++ b/introduction.mdx
@@ -52,4 +52,11 @@ This guide is broken into the following sections:
   >
     See how lesson payments work, how to connect your bank account, and how payouts work.
   </Card>
+  <Card
+    title="FAQ"
+    img="logo/credit-card-thin.svg"
+    href="https://mintlify.com/docs/development"
+  >
+    Answers to frequently asked questions.
+  </Card>
 </CardGroup>
