--- a/introduction.mdx
+++ b/introduction.mdx
@@ -54,7 +54,7 @@ This guide is broken into the following sections:
   </Card>
   <Card
     title="FAQ"
-    img="logo/credit-card-thin.svg"
+    <img src="logo/credit-card-thin.svg" alt="payments" style="height: 1.5rem; width: 1.5rem; margin-left: 20px; margin-top: 20px;" />
     href="https://mintlify.com/docs/development"
   >
     Answers to frequently asked questions.
