--- a/introduction.mdx
+++ b/introduction.mdx
@@ -54,8 +54,9 @@ This guide is broken into the following sections:
   </Card>
   <Card
     title="FAQ"
-    <img src="logo/credit-card-thin.svg" alt="payments" style="height: 1.5rem; width: 1.5rem; margin-left: 20px; margin-top: 20px;" />
-    href="https://mintlify.com/docs/development"
+    icon={<FontAwesomeIcon icon="fa-light fa-credit-card" />}
+    iconType="solid"
+    color="#777FD7"
   >
     Answers to frequently asked questions.
   </Card>
