--- a/introduction.mdx
+++ b/introduction.mdx
@@ -55,7 +55,7 @@ This guide is broken into the following sections:
   <Card
     title="FAQ"
     icon={<FontAwesomeIcon icon="fa-light fa-credit-card" />}
-    iconType="solid"
+    iconType="light"
     color="#777FD7"
   >
     Answers to frequently asked questions.
