--- a/introduction.mdx
+++ b/introduction.mdx
@@ -54,7 +54,7 @@ This guide is broken into the following sections:
   </Card>
   <Card
     title="FAQ"
-    icon={<FontAwesomeIcon icon="fa-light fa-credit-card" />}
+    icon={<FontAwesomeIcon icon="fa-credit-card" />}
     iconType="light"
     color="#777FD7"
   >
