--- a/introduction.mdx
+++ b/introduction.mdx
@@ -39,7 +39,9 @@ This guide is broken into the following sections:
   </Card>
   <Card
     title="Managing Lessons"
-    icon="image"
+    icon={<FontAwesomeIcon icon="fa-credit-card-front" />}
+    iconType="light"
+    color="#777FD7"
     href="https://mintlify.com/docs/development"
   >
     See how to view your upcoming/previous lessons, how to join a lesson, how our classroom works and
@@ -57,6 +59,7 @@ This guide is broken into the following sections:
     icon={<FontAwesomeIcon icon="fa-credit-card-front" />}
     iconType="light"
     color="#777FD7"
+    href="https://mintlify.com/docs/development"
   >
     Answers to frequently asked questions.
   </Card>
