--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,6 +1,6 @@
 ---
 title: Introduction
-description: 'Welcome to TutorOS, the management platform for private tutors!'
+description: 'Welcome to TutorOS, the management platform for private tutors'
 ---
 
 This is your guide to getting started with TutorOS.
