--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,9 +1,9 @@
 ---
 title: Introduction
-description: 'Welcome to TutorOS, the management platform for private tutors'
+description: 'Welcome to TutorOS, the management platform for private tutors.'
 ---
 
-This is your guide to getting started with TutorOS.
+This is your guide to getting started with TutorOS!
 
 ## What is TutorOS?
 
