--- a/introduction.mdx
+++ b/introduction.mdx
@@ -3,7 +3,7 @@ title: Introduction
 description: 'Welcome to TutorOS, the management platform for private tutors.'
 ---
 
-This is your guide to getting started with TutorOS!
+This is your guide to getting started with TutorOS.
 
 ## What is TutorOS?
 
@@ -38,9 +38,8 @@ This guide is broken into the following sections:
     See how to view your profile page, edit your profile and invite students to your page.
   </Card>
   <Card
-    title="Managing Lessons"
-    icon={<FontAwesomeIcon icon="fa-credit-card-front" />}
-    iconType="light"
+    title="FAQ"
+    icon="credit-card"
     color="#777FD7"
     href="https://mintlify.com/docs/development"
   >
@@ -56,8 +55,7 @@ This guide is broken into the following sections:
   </Card>
   <Card
     title="FAQ"
-    icon={<FontAwesomeIcon icon="fa-credit-card-front" />}
-    iconType="light"
+    icon="credit-card"
     color="#777FD7"
     href="https://mintlify.com/docs/development"
   >
