--- a/introduction.mdx
+++ b/introduction.mdx
@@ -25,7 +25,7 @@ This guide is broken into the following sections:
   </Card>
   <Card
     title="Schedule"
-    icon="image"
+    icon="calendar"
     href="https://mintlify.com/docs/development"
   >
     See how to view your schedule, add availability and connect your calendar.
@@ -38,7 +38,7 @@ This guide is broken into the following sections:
     See how to view your profile page, edit your profile and invite students to your page.
   </Card>
   <Card
-    title="FAQ"
+    title="Managing Lessons"
     icon="credit-card"
     color="#777FD7"
     href="https://mintlify.com/docs/development"
@@ -48,7 +48,7 @@ This guide is broken into the following sections:
   </Card>
   <Card
     title="Payments"
-    img="logo/credit-card-thin.svg"
+    icon="credit-card"
     href="https://mintlify.com/docs/development"
   >
     See how lesson payments work, how to connect your bank account, and how payouts work.
@@ -56,7 +56,6 @@ This guide is broken into the following sections:
   <Card
     title="FAQ"
     icon="credit-card"
-    color="#777FD7"
     href="https://mintlify.com/docs/development"
   >
     Answers to frequently asked questions.
