--- a/introduction.mdx
+++ b/introduction.mdx
@@ -18,7 +18,7 @@ This guide is broken into the following sections:
 <CardGroup cols={2}>
   <Card
     title="Lesson Templates"
-    icon="pen-to-square"
+    icon="folder"
     href="https://mintlify.com/docs/quickstart"
   >
     Learn what templates are and how to create them.
@@ -32,14 +32,14 @@ This guide is broken into the following sections:
   </Card>
   <Card
     title="Profile"
-    icon="image"
+    icon="user"
     href="https://mintlify.com/docs/development"
   >
     See how to view your profile page, edit your profile and invite students to your page.
   </Card>
   <Card
     title="Managing Lessons"
-    icon="credit-card"
+    icon="book-open"
     color="#777FD7"
     href="https://mintlify.com/docs/development"
   >
@@ -55,7 +55,7 @@ This guide is broken into the following sections:
   </Card>
   <Card
     title="FAQ"
-    icon="credit-card"
+    icon="question-mark-circle"
     href="https://mintlify.com/docs/development"
   >
     Answers to frequently asked questions.
