--- a/introduction.mdx
+++ b/introduction.mdx
@@ -43,8 +43,8 @@ This guide is broken into the following sections:
     color="#777FD7"
     href="https://mintlify.com/docs/development"
   >
-    See how to view your upcoming/previous lessons, how to join a lesson, how our classroom works and
-    how to give post-lesson feedback.
+    See how to view your upcoming/previous lessons, join a lesson, use our classroom and
+    leave feedback.
   </Card>
   <Card
     title="Payments"
