--- a/introduction.mdx
+++ b/introduction.mdx
@@ -55,7 +55,7 @@ This guide is broken into the following sections:
   </Card>
   <Card
     title="FAQ"
-    icon="question-mark-circle"
+    icon="question"
     href="https://mintlify.com/docs/development"
   >
     Answers to frequently asked questions.
