--- a/introduction.mdx
+++ b/introduction.mdx
@@ -51,7 +51,7 @@ This guide is broken into the following sections:
     icon="credit-card"
     href="https://mintlify.com/docs/development"
   >
-    See how lesson payments work, how to connect your bank account, and how payouts work.
+    Learn about lesson payments, connecting your bank account, and payouts.
   </Card>
   <Card
     title="FAQ"
