--- a/introduction.mdx
+++ b/introduction.mdx
@@ -19,21 +19,21 @@ This guide is broken into the following sections:
   <Card
     title="Lesson Templates"
     icon="folder"
-    href="https://docs.tutoros.app.com/templates/lesson-template-intro"
+    href="https://docs.tutoros.app/templates/lesson-template-intro"
   >
     Learn what templates are and how to create them.
   </Card>
   <Card
     title="Schedule"
     icon="calendar"
-    href="https://docs.tutoros.app.com/schedule/add-availability"
+    href="https://docs.tutoros.app/schedule/add-availability"
   >
     See how to view your schedule, add availability and connect your calendar.
   </Card>
   <Card
     title="Profile"
     icon="user"
-    href="https://docs.tutoros.app.com/profile/profile-page"
+    href="https://docs.tutoros.app/profile/profile-page"
   >
     See how to view your profile page, edit your profile and invite students.
   </Card>
@@ -41,7 +41,7 @@ This guide is broken into the following sections:
     title="Managing Lessons"
     icon="book-open"
     color="#777FD7"
-    href="https://docs.tutoros.app.com/lessons/viewing-lessons"
+    href="https://docs.tutoros.app/lessons/viewing-lessons"
   >
     See how to view your upcoming/previous lessons, join a lesson, use our classroom and
     leave feedback.
@@ -49,14 +49,14 @@ This guide is broken into the following sections:
   <Card
     title="Payments"
     icon="credit-card"
-    href="https://docs.tutoros.app.com/payments/payments-intro"
+    href="https://docs.tutoros.app/payments/payments-intro"
   >
     Learn about lesson payments, connecting your bank account, and payouts.
   </Card>
   <Card
     title="FAQ"
     icon="question"
-    href="https://docs.tutoros.app.com/faq/zoom-account"
+    href="https://docs.tutoros.app/faq/zoom-account"
   >
     Answers to frequently asked questions.
   </Card>
