--- a/introduction.mdx
+++ b/introduction.mdx
@@ -19,7 +19,7 @@ This guide is broken into the following sections:
   <Card
     title="Lesson Templates"
     icon="folder"
-    href="https://docs.tutoros.app/templates/lesson-template-intro"
+    href="templates/lesson-template-intro"
   >
     Learn what templates are and how to create them.
   </Card>
