--- a/payments/payments-intro.mdx
+++ b/payments/payments-intro.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Payments Intro'
+title: 'Lesson Payments Intro'
 description: 'Text, title, and styling in standard markdown'
 icon: 'text-size'
 ---
