--- a/templates/lesson-template-intro.mdx
+++ b/templates/lesson-template-intro.mdx
@@ -8,7 +8,9 @@ A Lesson Template defines details like the name, price, duration, payment policy
 
 When you create a new template, it will be available on your [profile page](/profile/profile-page) for students to book individual lessons for that template.
 
-For example, if you are a French and Spanish teacher, you could create two templates - `1-hour Spanish Lesson` and `1-hour French Lesson`, and then students would be able to book lessons in either of these from your profile page (based on your [availability](/schedule/add-availability)):
+### Example
+
+For example, if you are a French and Spanish teacher, you could create two templates, <br> `1-hour Spanish Lesson` and `1-hour French Lesson`, and then students would be able to book lessons in either of these from your profile page (based on your [availability](/schedule/add-availability)):
 
 ![Lesson Templates](/images/lesson-templates.png)
 
