--- a/templates/lesson-template-intro.mdx
+++ b/templates/lesson-template-intro.mdx
@@ -10,7 +10,7 @@ When you create a new template, it will be available on your [profile page](/pro
 
 ### Example
 
-For example, if you are a French and Spanish teacher, you could create two templates, <br> `1-hour Spanish Lesson` and `1-hour French Lesson`, and then students would be able to book lessons in either of these from your profile page (based on your [availability](/schedule/add-availability)):
+For example, if you are a French and Spanish teacher, you could create two templates, </br> `1-hour Spanish Lesson` and `1-hour French Lesson`, and then students would be able to book lessons in either of these from your profile page (based on your [availability](/schedule/add-availability)):
 
 ![Lesson Templates](/images/lesson-templates.png)
 
