--- a/templates/lesson-template-intro.mdx
+++ b/templates/lesson-template-intro.mdx
@@ -4,7 +4,9 @@ description: 'Learn about lesson templates.'
 icon: 'text-size'
 ---
 
-A Lesson Template defines details like the name, price, duration, payment policy and cancellation policy for a type of lesson. When students book a lesson for a template, they are booking an individual session created from this template.
+A Lesson Template defines details like the name, price, duration, payment policy and cancellation policy for a type of lesson.
+
+When students book a lesson for a template, they are booking an individual session created from this template.
 
 When you create a new template, it will be available on your [profile page](/profile/profile-page) for students to book individual lessons for that template.
 
