--- a/templates/create-new-template.mdx
+++ b/templates/create-new-template.mdx
@@ -4,4 +4,10 @@ description: 'Learn how to create a new lesson template'
 icon: 'text-size'
 ---
 
-To create a new lesson template, go to the Templates section in the app, and click the 
+To create a new lesson template, go to the [Templates](https://platform.tutoros.app/lesson-templates) section in the app, and click the `New Lesson Template` button:
+
+![Create New Lesson Template](/images/create-new-template.png)
+
+You will then be brought to the New Lesson Template screen, where you can set the name, category, price, duration, payment policy and cancellation policy for these lessons:
+
+![New Lesson Template](/images/new-template.png)
