--- a/templates/create-new-template.mdx
+++ b/templates/create-new-template.mdx
@@ -8,6 +8,6 @@ To create a new lesson template, go to the [Templates](https://platform.tutoros.
 
 ![Create New Lesson Template](/images/create-new-template.png)
 
-You will then be brought to the New Lesson Template screen, where you can set the name, category, price, duration, payment policy and cancellation policy for these lessons:
+You will then be brought to the New Lesson Template screen, where you can set the name, category, price, duration, payment policy and cancellation policy for this new template:
 
 ![New Lesson Template](/images/new-template.png)
