--- a/templates/create-new-template.mdx
+++ b/templates/create-new-template.mdx
@@ -11,3 +11,8 @@ To create a new lesson template, go to the [Templates](https://platform.tutoros.
 You will then be brought to the New Lesson Template screen, where you can set the name, category, price, duration, payment policy and cancellation policy for this new template:
 
 ![New Lesson Template](/images/new-template.png)
+
+Please see the [Lesson Payments Intro](/payments/payments-intro) section for more details on the lesson payment policy options.
+
+The following cancellation policies are available to choose from:
+
