--- a/templates/create-new-template.mdx
+++ b/templates/create-new-template.mdx
@@ -12,7 +12,7 @@ You will then be brought to the New Lesson Template screen, where you can set th
 
 ![New Lesson Template](/images/new-template.png)
 
-Please see the [Lesson Payments Intro](/payments/payments-intro) section for more details on the lesson payment policy options.
+Please see the [Lesson Payments Intro](/payments/payments-intro) section for more details on the payment policy options.
 
 The following cancellation policies are available to choose from:
 
