--- a/templates/create-new-template.mdx
+++ b/templates/create-new-template.mdx
@@ -14,5 +14,19 @@ You will then be brought to the New Lesson Template screen, where you can set th
 
 Please see the [Lesson Payments Intro](/payments/payments-intro) section for more details on the payment policy options.
 
-The following cancellation policies are available to choose from:
+The cancellation policy defines the terms under which students can cancel lessons. There are three options:
 
+1. **Flexible**
+   - **Cancellation Window:** Students can cancel or reschedule up to 24 hours before the lesson without penalty.
+   - **Refund:** Full refund or credit if canceled within the allowed window.
+   - **Late Cancellation:** If canceled less than 24 hours before the session, 50% of the lesson cost is charged.
+
+2. **Moderate**
+   - **Cancellation Window:** Cancellations allowed up to 48 hours before the session.
+   - **Refund:** Full refund if canceled within the allowed window.
+   - **Late Cancellation:** 50% charge if canceled between 24-48 hours; full charge if canceled less than 24 hours before.
+
+3. **Strict**
+   - **Cancellation Window:** Cancellations allowed up to 72 hours before the session.
+   - **Refund:** Full refund if canceled within the allowed window.
+   - **Late Cancellation:** No refund if canceled less than 72 hours before the session.
