--- a/templates/create-new-template.mdx
+++ b/templates/create-new-template.mdx
@@ -12,11 +12,11 @@ You will then be brought to the New Lesson Template screen, where you can set th
 
 ![New Lesson Template](/images/new-template.png)
 
-### Payment Policy 💳
+#### Payment Policy 💳
 
 Please see the [Lesson Payments Intro](/payments/payments-intro) section for more details on the payment policy options.
 
-### Cancellation Policy 🔁
+#### Cancellation Policy 🔁
 
 The cancellation policy defines the terms under which students can cancel lessons. There are three options:
 
