--- a/templates/create-new-template.mdx
+++ b/templates/create-new-template.mdx
@@ -4,6 +4,8 @@ description: 'Learn how to create a new lesson template'
 icon: 'text-size'
 ---
 
+### How to create a Lesson Template?
+
 To create a new lesson template, go to the [Templates](https://platform.tutoros.app/lesson-templates) section in the app, and click the `New Lesson Template` button:
 
 ![Create New Lesson Template](/images/create-new-template.png)
@@ -12,11 +14,11 @@ You will then be brought to the New Lesson Template screen, where you can set th
 
 ![New Lesson Template](/images/new-template.png)
 
-#### Payment Policy 💳
+### Payment Policy 💳
 
 Please see the [Lesson Payments Intro](/payments/payments-intro) section for more details on the payment policy options.
 
-#### Cancellation Policy 🔁
+### Cancellation Policy 🔁
 
 The cancellation policy defines the terms under which students can cancel lessons. There are three options:
 
