--- a/templates/lesson-template-intro.mdx
+++ b/templates/lesson-template-intro.mdx
@@ -4,6 +4,8 @@ description: 'Learn about lesson templates.'
 icon: 'text-size'
 ---
 
+### What is a Lesson Template?
+
 A Lesson Template defines details like the name, price, duration, payment policy and cancellation policy for a type of lesson.
 
 When students book a lesson for a template, they are booking an individual session created from this template.
