--- a/templates/view-templates.mdx
+++ b/templates/view-templates.mdx
@@ -16,7 +16,7 @@ To launch the action menu for a template, click the gear icon in the top right o
 
 ### Edit Template
 
-To edit a template, click on the `Edit template` link, where you will be brough to the Edit Template screen. You can edit all parameters for a template apart from its currency.
+To edit a template, click on the `Edit template` link, which will take you to the Edit Template screen. You can edit all parameters for a template apart from its currency.
 
 ### Archive Template
 
