--- a/templates/view-templates.mdx
+++ b/templates/view-templates.mdx
@@ -10,7 +10,7 @@ To view your lesson templates, go to the [Templates](https://platform.tutoros.ap
 
 ![Lesson Templates](/images/lesson-templates.png)
 
-To launch the action menu for a template, click the gear icon in the top right of the template box, where you will see the options to edit, archive or delete a template:
+To open the action menu for a template, click the gear icon in the top right corner of the template box. This will show the options to edit, archive or delete a template:
 
 ![Lesson Template Actions](/images/lesson-template-action.png)
 
