--- a/templates/manage-templates.mdx
+++ b/templates/manage-templates.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'View Templates'
+title: 'Manage Templates'
 description: 'Learn how to view, edit, archive and delete templates'
 icon: 'text-size'
 ---
