--- a/faq/zoom-account.mdx
+++ b/faq/zoom-account.mdx
@@ -4,7 +4,7 @@ description: 'Your Zoom Account'
 icon: 'text-size'
 ---
 
-TutorOS uses Zoom to host the video call between you & your student for a lesson
+TutorOS uses Zoom to host the video call between you & your student for a lesson.
 
 When joining the Zoom meeting for your lesson, you need to be logged into your Zoom account that uses the same email as your TutorOS account.
 
