--- a/templates/lesson-template-intro.mdx
+++ b/templates/lesson-template-intro.mdx
@@ -14,7 +14,7 @@ When you create a new template, it will be available on your [profile page](/pro
 
 ### Example
 
-Let's say you are a Spanish and French teacher, you could create two templates,  
+Let's say you are a Spanish and French tutor, you could create two templates,  
 `1-hour Spanish Lesson` and `1-hour French Lesson`, and then students would be able to book lessons in either of these from your profile page (based on your [availability](/schedule/add-availability)):
 
 ![Lesson Templates](/images/lesson-templates.png)
