--- a/schedule/add-availability.mdx
+++ b/schedule/add-availability.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Add Availability'
-description: 'Text, title, and styling in standard markdown'
+description: 'Learn about the TutorOS schedule and how to add availability.'
 icon: 'text-size'
 ---
 
@@ -12,8 +12,12 @@ lessons with you.
 
 ### Add Availability Slot
 
-To add a new availabilty slot, click on the
+To add a new availability slot for a time range during which you’re available for lessons, click on the desired time slot in the calendar, or click and drag from the start time to the end time:
 
-If you want a slot to be recurring (as let's say you are free for bookings every Wednesday from 6 pm - 9 pm), then you can tick the `Recurring` checkbox.
+![Add Availability 1](/images/add-availability-1.png)
 
-When a lesson is booked, that slot is taken in your calendar and no other lessons can be booked for that same time.
+In the pop-up that appears, you can adjust the start and end times of the slot. If you would like the slot to be recurring (for example, if you're available for bookings every Wednesday from 6 pm to 9 pm), simply check the `Recurring` box.
+
+![Add Availability 2](/images/add-availability-2.png)
+
+When a lesson is booked, the lesson time is taken in your calendar and no other lessons can be booked for that same time.
