--- a/schedule/add-availability.mdx
+++ b/schedule/add-availability.mdx
@@ -20,4 +20,4 @@ In the pop-up that appears, you can adjust the start and end times of the slot. 
 
 ![Add Availability 2](/images/add-availability-2.png)
 
-When a lesson is booked, the lesson time is taken in your calendar and no other lessons can be booked for that same time.
+When a lesson is booked, the lesson time is reserved in your calendar and no other lessons can be booked for that same time.
