--- a/schedule/manage-availability.mdx
+++ b/schedule/manage-availability.mdx
@@ -29,4 +29,10 @@ When a lesson is booked, the lesson time is reserved in your calendar and no oth
 
 ### Delete Availability Slot
 
-If you want to delete an availability slot, you can click the event in your schedule and then click 
+If you want to delete an availability slot, you can click the event in your schedule and then click the `Delete Event` button:
+
+![Delete Event 1](/images/delete-event-1.png)
+
+For availability slots that are recurring, you can either delete the slot just for that specific day or delete the entire recurring series. To delete the slot for just that day, click the `Delete Event` button. To delete the entire series, click the `Delete Recurring Series` button.
+
+![Delete Event 2](/images/delete-event-2.png)
