--- a/schedule/viewing-events.mdx
+++ b/schedule/viewing-events.mdx
@@ -1,8 +1,15 @@
 ---
 title: 'Viewing Lesson Events'
-description: 'Learn how to view lesson events'
+description: 'Learn how to view lesson events in your schedule'
 icon: 'text-size'
 ---
 
-When a student books a new lesson with you, the lesson is added as an event to your TutorOS Schedule's calendar:
+When a student books a new lesson with you, the lesson is added as an event to your schedule:
+
+![Lesson Event 1](/images/lesson-event-1.png)
+
+You can then view the lesson details by clicking on the event:
+
+![Lesson Event 2](/images/lesson-event-2.png)
+
 
