--- a/schedule/viewing-events.mdx
+++ b/schedule/viewing-events.mdx
@@ -4,7 +4,9 @@ description: 'Learn how to view lesson events in your schedule'
 icon: 'text-size'
 ---
 
-When a student books a new lesson with you, the lesson is added as an event to your schedule:
+### Viewing Lesson Events
+
+When a student books a new lesson, the lesson is added as an event to your schedule:
 
 ![Lesson Event 1](/images/lesson-event-1.png)
 
@@ -12,4 +14,4 @@ You can then view the lesson details by clicking on the event:
 
 ![Lesson Event 2](/images/lesson-event-2.png)
 
-
+**Note** that when a lesson is booked, the lesson time is reserved in your calendar and no other lessons can be booked for that same time.
