--- a/templates/create-new-template.mdx
+++ b/templates/create-new-template.mdx
@@ -4,7 +4,7 @@ description: 'Learn how to create a new lesson template'
 icon: 'text-size'
 ---
 
-### How to create a Lesson Template
+### How to Create a Lesson Template
 
 To create a new lesson template, go to the [Templates](https://platform.tutoros.app/lesson-templates) section in the app, and click the `New Lesson Template` button:
 
