--- a/schedule/connect-calendar.mdx
+++ b/schedule/connect-calendar.mdx
@@ -12,4 +12,4 @@ This feature is useful for identifying available time slots around external even
 
 ### How to connect your calendar
 
-To connect your calendar, 
+To connect your calendar...
