--- a/schedule/connect-calendar.mdx
+++ b/schedule/connect-calendar.mdx
@@ -4,12 +4,12 @@ description: 'Learn how to connect your external calendar to TutorOS.'
 icon: 'text-size'
 ---
 
-### Connect Calendar Introduction
+### Overview
 
 In TutorOS, you can connect an external calendar (such as your Gmail or Outlook calendar) so that events from this calendar are automatically displayed in your TutorOS schedule.
 
 This feature is useful for identifying available time slots around external events, such as university lectures, personal engagements, etc.
 
-### How to connect your calendar
+### How to Connect Your calendar
 
 To connect your calendar...
