--- a/schedule/viewing-events.mdx
+++ b/schedule/viewing-events.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Viewing Lesson Events'
-description: 'Learn how to view lesson events in your schedule'
+description: 'Learn how to view lesson events in your schedule.'
 icon: 'text-size'
 ---
 
