--- a/templates/create-new-template.mdx
+++ b/templates/create-new-template.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Create New Template'
-description: 'Learn how to create a new lesson template'
+description: 'Learn how to create a new lesson template.'
 icon: 'text-size'
 ---
 
