--- a/templates/manage-templates.mdx
+++ b/templates/manage-templates.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Manage Templates'
-description: 'Learn how to view, edit, archive and delete templates'
+description: 'Learn how to view, edit, archive and delete templates.'
 icon: 'text-size'
 ---
 
