--- a/schedule/connect-calendar.mdx
+++ b/schedule/connect-calendar.mdx
@@ -10,6 +10,6 @@ In TutorOS, you can connect an external calendar (such as your Gmail or Outlook 
 
 This feature is useful for identifying available time slots around external events, such as university lectures, personal engagements, etc.
 
-### How to Connect Your calendar
+### How to Connect Your Calendar
 
 To connect your calendar...
