--- a/profile/profile-page.mdx
+++ b/profile/profile-page.mdx
@@ -12,4 +12,4 @@ Your profile page is your unique landing page, where students can view your prof
 
 To view your page, click on your name on the top right of the toolbar and then click `My Link` in the dropdown:
 
-![Profile Page 1](/images/profile-page-1)
+![Profile Page 1](/images/profile-page-1.png)
