--- a/profile/profile-page.mdx
+++ b/profile/profile-page.mdx
@@ -13,3 +13,7 @@ Your profile page serves as a unique landing page where students can view your d
 To view your page, click on your name on the top right of the toolbar and then click `My Link` in the dropdown:
 
 ![Profile Page 1](/images/profile-page-1.png)
+
+You will then be directed to the `My Link` section, where you can view your unique profile link, ready to be copied and shared with students or posted online. Additionally, you can invite students to your page by clicking the `Invite Students` button, allowing you to enter the email addresses of the students you wish to invite.
+
+![Profile Page 2](/images/profile-page-2.png)
