--- a/profile/profile-page.mdx
+++ b/profile/profile-page.mdx
@@ -14,6 +14,12 @@ To view your page, click on your name on the top right of the toolbar and then c
 
 ![Profile Page 1](/images/profile-page-1.png)
 
-You will then be directed to the `My Link` section, where you can view your unique profile link, ready to be copied and shared with students or posted online. Additionally, you can invite students to your page by clicking the `Invite Students` button, allowing you to enter the email addresses of the students you wish to invite.
+You will then be directed to the `My Link` section, where you can view your unique profile link, ready to be copied and shared with students or posted online.
+
+Additionally, you can invite students to your page by clicking the `Invite Students` button, allowing you to enter the email addresses of the students you wish to invite.
 
 ![Profile Page 2](/images/profile-page-2.png)
+
+Clicking your profile page link will open your profile, displaying your details along with the [lesson templates](/templates/lesson-template-intro) you have created in your account:
+
+![Profile Page](/images/profile-page.png)
