--- a/faq/solving-zoom-issues.mdx
+++ b/faq/solving-zoom-issues.mdx
@@ -9,18 +9,18 @@ icon: 'text-size'
 If you are using Zoom from your browser, and you have installed pop-up blockers on your browser, then Zoom may fail to
 successfully launch when you join a lesson. You can easily resolve this by allowing pop-ups for Zoom. Here's how to do it:
 
-#### Chrome
-1. Click the three dots in the upper-right corner, go to **Settings** > **Privacy and security** > **Site settings** > **Pop-ups and redirects**.
-2. Under **Allowed to send pop-ups and use redirects**, click **Add**, and enter `zoom.us` to allow pop-ups.
+1. **Chrome**
+   - Click the three dots in the upper-right corner, go to **Settings** > **Privacy and security** > **Site settings** > **Pop-ups and redirects**.
+   - Under **Allowed to send pop-ups and use redirects**, click **Add**, and enter `zoom.us` to allow pop-ups.
 
-#### Firefox
-1. Click the menu button, go to **Settings** > **Privacy & Security**.
-2. Under **Permissions**, locate **Block pop-up windows** and click **Exceptions**.
-3. Enter `zoom.us` and click **Allow** to whitelist Zoom.
+2. **Firefox**
+   - Click the menu button, go to **Settings** > **Privacy & Security**.
+   - Under **Permissions**, locate **Block pop-up windows** and click **Exceptions**.
+   - Enter `zoom.us` and click **Allow** to whitelist Zoom.
 
-#### Safari
-1. Go to **Safari** > **Preferences** > **Websites** > **Pop-up Windows**.
-2. Find `zoom.us` in the list and select **Allow**.
+3. **Safari**
+   - Go to **Safari** > **Preferences** > **Websites** > **Pop-up Windows**.
+   - Find `zoom.us` in the list and select **Allow**.
 
 ### Audio Issues
 
